made major progress on UI front. Timer works. LocalStorage works. 2 questions displayed. Next step, add more q's AND fix the HS display screen

--- a/index.html
+++ b/index.html
@@ -35,18 +35,23 @@
 
     <section id="gameOver">
         <section id="finalScorePoints"></section>
-        <input type="text" size="40" placeholder="Enter your initials" name="intials" id="initials" />
+        <input type="text" size="40" placeholder="Enter your initials" name="initials" id="initials" />
         <button id="submitScore">Submit Score Now</button>
     </section>
 
     <section id="highScoreScreen">
         <section id="highScorePage">
             <section id="HighScore-titlePage">
-                <h3>High Score: </h3>
-                <h3>Score: </h3>
+
             </section>
-            <section id="HS_initials"></section>
-            <section id="HS_Score"> </section>
+            <section>
+                <h3>Name: </h3>
+                <h3>Score: </h3>
+                <ol id="HS_initials">
+                </ol>
+
+                <section id = "HS_Score"></section>
+            </section>
         </section>
 
 
